# settingsclass

./: .gitignore  README.md  README_JA.md  __init__.py  demo.py  localizer.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  web2.ini  webconfig.ini
.github/workflows/: tests.yml
src/settingsclass/: __init__.py  localizer.py  requirements.txt  settingsclass.py
src/settingsclass/loc/: settings.csv
tests/: test_localization.py  test_localization_fail_cases.py  test_settings.py
