[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "settingsclass"
authors = [
    {name = "Robert Kajnak"}
]
description = "A class decorator to easily store setting values with automatic file io."
keywords = ["settings", "config", "configuration", "ini", "configparser", "dataclass"]
version = "0.1.0"
license = {text = "MIT Licence"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "pycryptodome>=3.20.0"
]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/id-ai-labo/settingsclass"

[tool.setuptools.package-data]
settingsclass = ["loc/*.csv"]